--- a/package.json
+++ b/package.json
@@ -1,11 +1,66 @@
 {
+  "name": "instagram-dynamic-profile",
+  "description": "Lightweight library for creating a service that dynamically makes updates to your Instagram profile information periodically.",
+  "version": "0.0.2",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "license": "MIT",
+  "engines": {
+    "node": ">=8.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/noodleofdeath/instagram-dynamic-profile/issues",
+    "email": "github@noodleofdeath.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/noodleofdeath/instagram-dynamic-profile.git"
+  },
+  "homepage": "https://github.com/noodleofdeath/instagram-dynamic-profile",
   "scripts": {
-    "start": "ts-node idp.ts"
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "typecheck": "tsc -p tsconfig.build.json --noEmit",
+    "prepare": "npm run build",
+    "test": "mocha --inline-diffs --timeout 1000000 tests/run.js",
+    "generate-interface": "ts-node ./tools/response-to-interface.ts",
+    "generate-docs": "typedoc"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "dependencies": {
-    "dotenv": "^16.0.0",
     "instagram-private-api": "^1.45.2",
-    "lodash": "^4.17.21",
+    "lodash": "^4.17.21"
+  },
+  "peerDependencies": {
     "re2": "^1.17.4"
+  },
+  "peerDependenciesMeta": {
+    "re2": {
+      "optional": true
+    }
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.123",
+    "@types/node": "^10.14.5",
+    "dotenv": "^16.0.0",
+    "husky": "^1.3.1",
+    "inquirer": "^1.1.2",
+    "json-ts": "^1.6.4",
+    "prettier": "^1.19.1",
+    "pretty-quick": "^1.10.0",
+    "rimraf": "^2.6.3",
+    "ts-node": "^10.7.0",
+    "tslint": "^5.16.0",
+    "typedoc": "^0.22.11",
+    "typedoc-plugin-markdown": "^3.11.14",
+    "typescript": "^4.6.3"
   }
 }
