--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "instagram-dynamic-profile",
-  "description": "Lightweight library for creating a service that dynamically makes updates to your Instagram profile information periodically.",
-  "version": "0.2.0",
+  "name": "biobot",
+  "description": "Lightweight library for creating a service that dynamically makes updates to a social profile account periodically.",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -12,14 +12,14 @@
     "node": ">=8.0.0"
   },
   "bugs": {
-    "url": "https://github.com/noodleofdeath/instagram-dynamic-profile/issues",
+    "url": "https://github.com/noodleofdeath/biobot/issues",
     "email": "github@noodleofdeath.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/noodleofdeath/instagram-dynamic-profile.git"
+    "url": "https://github.com/noodleofdeath/biobot.git"
   },
-  "homepage": "https://github.com/noodleofdeath/instagram-dynamic-profile",
+  "homepage": "https://github.com/noodleofdeath/biobot",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
@@ -48,8 +48,12 @@
     }
   },
   "devDependencies": {
+    "@types/ansi-colors": "^3.2.2",
+    "@types/argparse": "^2.0.10",
     "@types/lodash": "^4.14.123",
     "@types/node": "^10.14.5",
+    "ansi-colors": "^4.1.1",
+    "argparse": "^2.0.1",
     "dotenv": "^16.0.0",
     "husky": "^1.3.1",
     "inquirer": "^1.1.2",
