--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "biobot",
+  "name": "social-bio-bot",
   "description": "Lightweight library for creating a service that dynamically makes updates to a social profile account periodically.",
   "version": "0.0.1",
   "main": "dist/index.js",
@@ -12,14 +12,14 @@
     "node": ">=8.0.0"
   },
   "bugs": {
-    "url": "https://github.com/noodleofdeath/biobot/issues",
+    "url": "https://github.com/noodleofdeath/social-bio-bot/issues",
     "email": "github@noodleofdeath.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/noodleofdeath/biobot.git"
+    "url": "https://github.com/noodleofdeath/social-bio-bot.git"
   },
-  "homepage": "https://github.com/noodleofdeath/biobot",
+  "homepage": "https://github.com/noodleofdeath/social-bio-bot",
   "scripts": {
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
